--- a/buildout.cfg
+++ b/buildout.cfg
@@ -48,7 +48,7 @@ log=${buildout:directory}/log/fcgi.log
 recipe = collective.recipe.template
 input = buildout_templates/nginx.conf.in
 output = ${buildout:directory}/nginx/foundationtargets.conf
-server-name = localhost
+server-name = targets.praekeltfoundation.org qa.targets.praekeltfoundation.org 
 port = 80
 fcgi-host = ${foundationtargets-fcgi:host}
 fcgi-port = ${foundationtargets-fcgi:port}
